[project]
name = "off-the-shelf"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "manim (>=0.19.2,<0.20.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"

